<resources>
    <string name="app_name">EterationCaseApp</string>
    <string name="error_message">Error</string>
    <string name="product_image_desc">image of the product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app">E-Market</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_title">Product Title</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity_text_ex">5</string>
    <string name="total_price_text">Total:</string>
    <string name="complete_purchase">Complete</string>
    <string name="filter">Filters:</string>
    <string name="select_filter">Select Filter</string>
    <string name="price_ex">$99.99</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="in_your_chart">In Your Cart</string>
    <string name="price_text">"Price: "</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="price">Price:</string>
    <string name="search">Search</string>
    <string name="update_filters">Update Filters</string>
    <string name="brand">Brand</string>
    <string name="error_common">\"An unknown error occurred\"</string>
    <string name="removed_product">\"Product has been removed from your chart!\"</string>
    <string name="no_connection">No Internet Connection</string>
</resources>