<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/rounded_bg"
    android:elevation="6dp">

    <ImageView
        android:id="@+id/bookmark_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bookmark_icon"
        android:elevation="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/bookmarked"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/product_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/price_ex"
        android:textColor="@color/app_blue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/product_title"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/product_price"
        app:layout_constraintTop_toBottomOf="@id/product_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rounded_button_bg"
        android:fontFamily="sans-serif"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/product_title"
        app:layout_constraintTop_toBottomOf="@id/product_title"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
